# BackendLab1

./: .env  .env.template  .gitignore  README.md  pyproject.toml
app/: .env  main.py  test.sqlite
app/api/: __init__.py  allergens.py  cuisines.py  ingredients.py  lab1.py  lab1_misc.py  lab1a1.py  lab2.py  posts.py  recipe_utils.py  recipes.py  test.py
app/authentication/schemas/: user.py
app/config/: config.py
app/models/: __init__.py  allergen.py  cuisine.py  db_helper.py  enums.py  ingredient.py  item.py  post.py  recipe.py  recipe_allergen.py  recipe_ingredient.py  users.py
app/queries/: __init__.py  allergen_queries.py  cuisine_queries.py  ingredient_queries.py  recipe_queries.py
app/repositories/: __init__.py  allergen_repository.py  cuisine_repository.py  ingredient_repository.py  recipe_repository.py
app/schemas/: __init__.py  allergen.py  cuisine.py  filter_params.py  form_data.py  ingredient.py  item.py  recipe.py  recipe_filter.py
app/services/: __init__.py  recipe_service.py
tests/: TESTING_CHECKLIST.md  conftest.py  test_recipe_service.py
